--- a/style.css
+++ b/style.css
@@ -220,3 +220,18 @@ a {
     flex-grow: 1;
   }
 }
+@media  screen and (min-width: 10px){
+  .container {
+    justify-content: none;
+    gap : 0px;
+  }
+  .item {
+    flex-direction: column;
+    width: auto;
+  }
+  img {
+    width: 50px;
+    object-fit: contain;
+    flex-grow: 1;
+  }
+}
